[package]
name = "ops_crdt_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
lazy_static = "1.5.0"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
rand = { version = "0.8.5", features = ["small_rng"] }
